--- a/study_v1s4m3c/src/main/webapp/menu/css/bootstrap-responsive.css
+++ b/study_v1s4m3c/src/main/webapp/menu/css/bootstrap-responsive.css
@@ -127,12 +127,7 @@
     min-height: 1px;
     margin-left: 30px;
   }
-  .container,
-  .navbar-static-top .container,
-  .navbar-fixed-top .container,
-  .navbar-fixed-bottom .container {
-    width: 1170px;
-  }
+
   .span12 {
     width: 1170px;
   }
@@ -481,7 +476,7 @@
   .navbar-static-top .container,
   .navbar-fixed-top .container,
   .navbar-fixed-bottom .container {
-    width: 724px;
+    width: 100%;
   }
   .span12 {
     width: 724px;
@@ -800,16 +795,19 @@
 }
 
 @media (max-width: 767px) {
+  
+  
   body {
+    widhth: 100%
     padding-right: 20px;
     padding-left: 20px;
   }
-  .navbar-fixed-top,
+ .navbar-fixed-top,
   .navbar-fixed-bottom,
   .navbar-static-top {
     margin-right: -20px;
     margin-left: -20px;
-  }
+  } 
   .container-fluid {
     padding: 0;
   }
@@ -999,10 +997,10 @@
     text-shadow: none;
   }
   
+  /* Dropdown Menu에서 Sub menu 속성 */
   .nav-collapse .nav > li > a,
   .nav-collapse .dropdown-menu a {
     padding: 9px 15px;
-    font-weight: bold;
     color: #777777;
     -webkit-border-radius: 3px;
        -moz-border-radius: 3px;
