--- a/study_v1s4m3c/src/main/webapp/my_pds/css/my_pds_style.css
+++ b/study_v1s4m3c/src/main/webapp/my_pds/css/my_pds_style.css
@@ -2,6 +2,16 @@
   color: #000000;
 }
 
+::-webkit-scrollbar {
+  display:none;
+}
+
+.content{
+  width: 90%;
+  margin: 0px auto;
+  margin-bottom: 50px;
+}
+
 .pagination a {
     color: black;
     padding: 8px 16px;
@@ -18,6 +28,7 @@
  
 a{
   transition: all 0.3s;
+  cursor: pointer; 
 }
 
 i{
@@ -27,4 +38,58 @@ i{
 .li_none{
   list-style: none; /* 블렛 기호 생략 */
   margin: 10px 10px; /* 위아래 좌우 */
+}
+
+.side_btngrp{
+  width:80%;
+  font-size:11px;
+}
+
+
+#paging {
+  text-align: center; 
+  margin-top: 5px; 
+  font-size: 1em;
+}
+
+#paging A:link {
+  text-decoration:none;
+  color:black;
+  font-size: 1em;
+}
+#paging A:hover{
+  text-decoration:none;
+  background-color: #FFFFFF;
+  color:black;
+  font-size: 1em;
+} 
+
+#paging A:visited {
+  text-decoration:none;
+  color:black;
+  font-size: 1em;
+}  
+ 
+.span_box_1{
+  float:none;
+  text-align: center;
+  font-size: 1em;
+  border: 1px;
+  border-style: solid;
+  border-color: #cccccc;
+  padding:1px 6px 1px 6px; /*위, 오른쪽, 아래, 왼쪽*/    
+  margin:1px 2px 1px 2px; /*위, 오른쪽, 아래, 왼쪽*/  
+}  
+
+.span_box_2{
+  float:none; 
+  text-align: center;    
+  background-color: #668db4;    
+  color: #FFFFFF;    
+  font-size: 1em;    
+  border: 1px;    
+  border-style: solid;
+  border-color: #cccccc;    
+  padding:1px 6px 1px 6px; /*위, 오른쪽, 아래, 왼쪽*/    
+  margin:1px 2px 1px 2px; /*위, 오른쪽, 아래, 왼쪽*/  
 }
